--- a/css/profile.css
+++ b/css/profile.css
@@ -14,7 +14,7 @@
   border-radius: 15px 15px 0 0;
   margin: 0 auto;
   padding: 30px 30px 0 30px;
-  background-color: #bdbeff;
+  background-color: #494949;
   overflow: hidden;
   /* display: none; */
 }
